<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">55mun</string>
    <string name="action_settings">Settings</string>
    <string name="image_desc"></string>
    <string name="txt_splash_copyright">Copyright \@ 2014 Android Market</string>
    <string name="book_string">Novel</string>
    <string name="txt_home_leader_online">Games</string>
    <string name="txt_home_leader_latest_collection">Latest</string>
    <string name="txt_home_leader_classic_play">Classics</string>
    <string name="toast_load_more_no_result">The End.</string>
    <string name="welcome_alert">Fun anywhere anytime.</string>
    <string name="bottom_home">Recommend</string>
    <string name="bottom_rank">Ranking</string>
    <string name="bottom_cate">Category</string>
    <string name="bottom_sub">Featured</string>
    <string name="bottom_mine">My Manager</string>
    <string name="toast_pwd_not_less_6_or_more_16">密码不能少于6位数或多于16位数</string>
    <string name="btn_rec_select_count">Install the selected(%1$s)</string>
    <string name="listview_loadfailed">Loading failed. Please try again.</string>
    <string name="listview_loadding">Loading…</string>
    <string name="listview_loadding2">No app at all.</string>
    <string name="listview_loadding3">No app added to your Favorite.</string>
    <string name="listview_loadding4">No app at all.</string>
    <string name="setting_dowload">Download the video player</string>
    <string name="happy_more">Daily update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit_confirm">System Notice</string>
    <string name="exit_confirm_msg">Want to quit?</string>
    <string name="exit_confirm_downloading">System Notice</string>
    <string name="exit_confirm_downloading_msg">Downloading not completed. Proceed to exit?</string>
    <string name="exit_confirm_goondownload_check">Continue to download after exit.</string>
    <string name="storage_phone">Phone</string>
    <string name="storage_sdcard">SD Card</string>
    <string name="storage_fomat">Used:%1$s  Available:%2$s</string>
    <string name="storage_unaviable">Unavailable</string>
    <string name="set_app">Settings</string>
    <string name="update_app">Check Updates</string>
    <string name="clean_app">Clean up Cache</string>
    <string name="suggest_app">Feedback</string>
    <string name="about_app">About</string>
    <string name="rank_t1">Ranking:</string>
    <string name="btn_install">Install</string>
    <string name="today_rec_tip">"Today&#039;s Recommend"</string>
    <string name="state_wait_action_text">Waiting…</string>
    <string name="state_retry_action_text">Retry</string>
    <string name="state_ongoing_action_text">Pause</string>
    <string name="state_pause_action_text">Continue</string>
    <string name="state_finish_action_text">Continue</string>
    <string name="state_finish_need_update_action_text">Continue to update</string>
    <string name="state_installing_action_text">Installing…</string>
    <string name="state_installing_need_update_action_text">Updating…</string>
    <string name="state_install_failed_action_text">Continue</string>
    <string name="state_install_failed_need_update_action_text">Continue</string>
    <string name="state_update_action_text">Update</string>
    <string name="state_uninstalling_action_text">Uninstalling…</string>
    <string name="state_installed_new_action_text">Start</string>
    <string name="state_idle_action_text">Install</string>
    <string name="state_wait_text">Waiting…</string>
    <string name="state_retry_text">Download Failed</string>
    <string name="state_ongoing_text">Installing…</string>
    <string name="state_ongoing_need_update_text">Updating…</string>
    <string name="state_pause_text">Paused</string>
    <string name="state_finish_text">Not Installed</string>
    <string name="state_finish_need_update_text">Not updated</string>
    <string name="state_uninstalling_text">Uninstalling…</string>
    <string name="state_installing_text">Installing…</string>
    <string name="state_installing_need_update_text">Updating</string>
    <string name="state_install_failed_text">Installation failed</string>
    <string name="state_install_failed_need_update_text">Update Failed</string>
    <string name="state_idle_text">Added to Favorites</string>
    <string name="down_progress_detail"> %1$s /  %2$s </string>
    <string name="down_progress_detail2">%1$s</string>
    <string name="down_summary">Version:</string>
    <string name="downloadfile_sdcard_no_more_space">No enough storage in SD card.</string>
    <string name="dialog_retry_title">Note</string>
    <string name="dialog_retry_msg">%s Downloading error. Proceed to download again?</string>
    <string name="dialog_delete_confirm_tips">Are you sure to delete?</string>
    <string name="dialog_retry_btn_ok">Redownload</string>
    <string name="dialog_retry_btn_back">Back</string>
    <string name="dialog_retry_btn_goon">Installing…</string>
    <string name="apk_not_exist">APK File Already Existed.</string>
    <string name="insert_sdcard_first">Please insert your SD card</string>
    <string name="sdcard_using_close_first">SD card in use. Please first turn off your USB device.</string>
    <string name="sdcard_state_unusual">SD card status error.</string>
    <string name="dialog_install_no_file_title">Warning</string>
    <string name="dialog_install_no_file_msg">No APK found. Proceed to new download?</string>
    <string name="dialog_nowifi_title">Download Notice</string>
    <string name="dialog_nowifi_msg">No WIFI available. Proceed to download?</string>
    <string name="dialog_nowifi_btn_ok">OK</string>
    <string name="dialog_nowifi_btn_back">Cancel</string>
    <string name="dialog_nowifi_btn_fav">Add to Favorites</string>
    <string name="taost_pkg_mgr_busy">App Installing / Uninstalling... Please wait.</string>
    <string name="sdcard_unavailable">SD card not available. Please try again after checking.</string>
    <string name="game_update_notify_title">App Update</string>
    <string name="game_start_rec_title">Popular</string>
    <string name="game_update_notify_msg">%1$s app(s) updates available. Press to view details.</string>
    <string name="game_download_notify_title">App Download</string>
    <string name="game_download_notify_msg">%1$s app(s) downloading. Press to view details.</string>
    <string name="dialog_goon_download_title">Note</string>
    <string name="dialog_goon_download_msg">%1$s app(s) not downloaded. Proceed to download?</string>
    <string name="txt_tips_never">"Remind no more."</string>
    <string name="detail">"Details"</string>
    <string name="share_app">"Share"</string>
    <string name="download">"Download"</string>
    <string name="faviorate">"Add to Favorites"</string>
    <string name="share_info_to_friend">"Share to Friends"</string>
    <string name="can_not_share_info">"Sorry! Sharing failed due to no relevant app."</string>
    <string name="can_not_share_info2">"Data Loading... Please wait."</string>
    <string name="txt_detail_tag_aut">"Official"</string>
    <string name="txt_detail_tag_safe">"Secure"</string>
    <string name="txt_detail_tag_no_ads">"No Ad"</string>
    <string name="txt_detail_tag_free">"Free"</string>
    <string name="settings_noicon_title_s">"Display icon; Display screenshot; Normal downloading"</string>
    <string name="settings_noicon_title_b">""Telecom Data Usage Saving Mode</string>
    <string name="settings_toast_title_s">"Update Notification; Recommend Notification"</string>
    <string name="settings_toast_title_b">"Notification"</string>
    <string name="settings_dpath_title_s">"SD card"</string>
    <string name="settings_dpath_title_b">"Download file"</string>
    <string name="settings_dsize_title_s">3</string>
    <string name="settings_dsize_title_b">"Max simultaneous downloads allowed"</string>
    <string name="settings_qinstall_title_b">"Fast install or uninstall app"</string>
    <string name="settings_qinstall_title_s">"Install or uninstall app in background %1$s"</string>
    <string name="about_app_name">"Name"</string>
    <string name="about_down_summary">"Version"</string>
    <string name="support_system">System</string>
    <string name="suppert_system">Android 2.1 or above</string>
    <string name="product_dec">"Massive free apps available"</string>
    <string name="version_management">version management</string>
    <string name="app_list_new">"New"</string>
    <string name="app_list_hot">"Hot"</string>
    <string name="search_hint">"No.1 Thai Contents: Joke/Movie/App"</string>
    <string name="search">"Search"</string>
    <string name="search_clear_history">"Clear history"</string>
    <string name="user_login_name_hint">"Please enter your account."</string>
    <string name="reg_user_login_name_hint">English numbers or a combination of user name</string>
    <string name="reg_user_login_pwd_hint">Letter or number combination within 6 to 16 characters.</string>
    <string name="user_login_pwd_hint">"Please enter a password"</string>
    <string name="back">Cancel</string>
    <string name="reg_user_login_pwd_hint_repeat">"Should be the same password twice"</string>
    <string name="expend_child1_text">"Install"</string>
    <string name="expend_child2_text">"Details"</string>
    <string name="expend_child3_text">"Comments"</string>
    <string name="expend_child4_text">"Tips"</string>
    <string name="expend_child5_text">"Uninstall"</string>
    <string name="expend_child5_remove">"Delete"</string>
    <string name="expend_child5_del_fav">"Removed"</string>
    <string name="expend_child5_text_msg">Proceed to uninstall %s?</string>
    <string name="expend_child5_text_uninstall_system_updated_msg">"%s is OEM app. Update to newest version?"</string>
    <string name="expend_child5_text_uninstall_system_msg">"%s is OEM app. Uninstall forbiddened."</string>
    <string name="expend_child5_remove_msg">"Are you sure to delete?"</string>
    <string name="expend_child5_del_fav_msg">"Are you sure to remove %s from Favorites?"</string>
    <string name="expend_child5_text_check">Delete APK files too?</string>
    <string name="mine_empty_message">"No app downloaded. Click "Recommend" for best apps!"</string>
    <string name="txt_my_game_count">My apps ( %1$s )</string>
    <string name="updatetip">"App Assistant New Update Notice"</string>
    <string name="market_update_title">"App Assistant Version Information"</string>
    <string name="titlebar_title_change_userinfo">"Information Change"</string>
    <string name="titlebar_title_login">"Login"</string>
    <string name="titlebar_title_account">"Account"</string>
    <string name="titlebar_title_logout">"Logout"</string>
    <string name="titlebar_title_regist">"Register"</string>
    <string name="titlebar_title_settings">"Settings"</string>
    <string name="titlebar_cancel">"Cancel"</string>
    <string name="titlebar_title_suggest">"Feedback"</string>
    <string name="titlebar_title_about">"About Us"</string>
    <string name="titlebar_title_protocol">"User Agreement"</string>
    <string name="user_login_regist">"Register"</string>
    <string name="user_login">Login</string>
    <string name="user_login_login">"Login"</string>
    <string name="txt_uninstall_dialog_title">Uninstall Note</string>
    <string name="tip_uninsatll">Uninstall</string>
    <string name="qtuninstall">"Uninstall?"</string>
    <string name="gamebox">"App box"</string>
    <string name="ut_01">"Apps?"</string>
    <string name="ut_02">"Proceed to uninstall"</string>
    <string name="qm">"?"</string>
    <string name="ut_03">"5"</string>
    <string name="level_1">VIP 1:(0-50)</string>
    <string name="level_2">VIP 2:(50-200)</string>
    <string name="level_3">VIP 3:(200-500)</string>
    <string name="level_4">VIP 4:(500-1000)</string>
    <string name="level_5">VIP 5:(>1000)</string>
</resources>